--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,9 @@
 *.user
 *.userosscache
 *.sln.docstates
-
+.vs/
+MovEasy/bin
+MovEasy/obj
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
